--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: myputt_touchable
+name: touchable
 description: Flutter library to add various gesture callbacks to each Shape you draw on your canvas in your CustomPainter
 version: 1.0.1
 repository: https://github.com/nateshmbhat/touchable
